# rust-adventures

./: Cargo.toml  rust.code-workspace
blog/: s01e01.md
blog/s01e01/: s01e01.md
projects/daily-practice/: Cargo.toml
projects/daily-practice/src/: daily20230323.rs  daily20230324.rs  daily20230325.rs  daily20230327.rs  daily20230329.rs  daily20230708.rs  main.rs
projects/datastructures/src/: binary_search.rs  bubble_sort.rs  linear_search.rs  main.rs  two_crystal_balls.rs
projects/discord-bot/: Cargo.toml
projects/discord-bot/src/: handler.rs  main.rs  poll.rs  trivia.rs
projects/discord-bot/src/commands/: mod.rs  poll.rs  trivia.rs
projects/hello-world/: Cargo.toml
projects/hello-world/src/: main.rs  request.rs  response.rs
projects/trivia/: Cargo.toml
projects/trivia/src/: main.rs
rust-hello-world/src/: main.rs  request.rs  response.rs
