[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serenity = "0.11.5"
futures = "0.3.27"
